--- a/UC alert tool/Views/Rapporteren/Melding.cshtml
+++ b/UC alert tool/Views/Rapporteren/Melding.cshtml
@@ -53,14 +53,14 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Einddatum, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Einddatum, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Einddatum, new { htmlAttributes = new { @class = "form-control", @id = "einddatum" } })
                     @Html.ValidationMessageFor(model => model.Einddatum, "", new { @class = "text-danger" })
                 </div>
             </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Eindtijd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Eindtijd, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Eindtijd, new { htmlAttributes = new { @class = "form-control", @id= "eindtijd" } })
                 @Html.ValidationMessageFor(model => model.Eindtijd, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -69,8 +69,8 @@
             @Html.LabelFor(model => model.IsGesloten, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.IsGesloten)
-                    @Html.ValidationMessageFor(model => model.IsGesloten, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.IsGesloten, new { htmlAttributes = new { @Id = "isGeslotenCheckbox" } })
+                    @Html.ValidationMessageFor(model => model.IsGesloten, "", new { @class = "text-danger", })
                 </div>
             </div>
         </div>
