--- a/UC alert tool/Views/Testers/SMSTester.cshtml
+++ b/UC alert tool/Views/Testers/SMSTester.cshtml
@@ -9,27 +9,27 @@
     @Html.AntiForgeryToken()
     <form role="form">
         <div class="form-group">
-            <label class="control-label" >Server IP</label>
+            <label class="control-label" >sms gateway</label>
             @Html.EditorFor(model => model.server, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.server, "", new { @class = "text-danger" })        
         </div>
         <div class="form-group">
-            <label class="control-label" >username</label>
+            <label class="control-label" >gebruikersnaam</label>
             @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            <label class="control-label" >password</label>
+            <label class="control-label" >wachtwoord</label>
             @Html.PasswordFor(model => model.password, new{ @class = "form-control" } )
             @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            <label class="control-label" >recipients</label>
+            <label class="control-label" >ontvangers</label>
             @Html.TextBoxFor(model => model.Recipients, new { @class = "form-control", placeholder = "061112233,06223344"} )
             @Html.ValidationMessageFor(model => model.Recipients, "", new { @class = "text-danger" })        
         </div>
         <div class="form-group">
-            <label class="control-label" >Text</label>
+            <label class="control-label" >tekst</label>
             @Html.EditorFor(model => model.text, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.text, "", new { @class = "text-danger" })
         </div>
