--- a/UC alert tool/Views/Testers/SMSTester.cshtml
+++ b/UC alert tool/Views/Testers/SMSTester.cshtml
@@ -33,6 +33,6 @@
             @Html.EditorFor(model => model.text, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.text, "", new { @class = "text-danger" })
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Verzenden</button>
     </form>
 }
