--- a/UC alert tool/Views/Home/Contact.cshtml
+++ b/UC alert tool/Views/Home/Contact.cshtml
@@ -1,17 +1,15 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-
-<h2>@ViewBag.Title</h2>
 <h3>Contact opnemen met UC Systems</h3>
 
 <address>
     kade 64<br />
-    hardixveld-giessendam, 3371 EP<br />
-    <abbr title="support nummer">Tel:</abbr>
+    3371 EP<br />
+    Hardinxveld-Giessendam<br />
     088-6666 333
 </address>
 
 <address>
-    <strong>Support afdeling:</strong>   <a href="mailto:service@ucsystems.nl?SUBJECT=RE: Service UC Systems.nl">services@ucsystems.nl</a><br />
+    <strong>Support afdeling:</strong>   <a href="mailto:service@ucsystems.nl?SUBJECT=RE: Service UC Systems.nl">service@ucsystems.nl</a><br />
 </address>
