--- a/UC alert tool/Views/Home/Index.cshtml
+++ b/UC alert tool/Views/Home/Index.cshtml
@@ -28,10 +28,10 @@
                 </div>
                 <div class="panel-body">@Html.DisplayFor(modelItem => item.Inhoud)</div>
                 <div class="panel-footer">
-                    van @item.Begindatum.ToString("d") @item.Begintijd<br />
+                    van @item.Begindatum.ToString("dd-MM-yyyy") @item.Begintijd.Value.ToString(@"hh\:mm")<br />
                     @if (item.Einddatum != null)
                     {
-                        @:tot @item.Einddatum.Value.ToString("dd-MM-yyyy") @item.Eindtijd
+                        @:tot @item.Einddatum.Value.ToString("dd-MM-yyyy") @item.Eindtijd.Value.ToString(@"hh\:mm")
                     }
                     else
                     {
