--- a/UC alert tool/Views/Shared/_LoginPartial.cshtml
+++ b/UC alert tool/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink(GetTime.GetGreetingsmessageBasedOnTimeOfDay() + " " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink(GetTime.GetGreetingsmessageBasedOnTimeOfDay() + " " + User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Uitloggen</a></li>
     </ul>
