Translated the change password page to Dutch and translated other messages

--- a/UC alert tool/Views/Home/Contact.cshtml
+++ b/UC alert tool/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 <h3>Contact opnemen met UC Systems</h3>
 
 <address>
-    kade 64<br />
+    Kade 64<br />
     3371 EP<br />
     Hardinxveld-Giessendam<br />
     088-6666 333
