--- a/UC alert tool/Views/Home/Index.cshtml
+++ b/UC alert tool/Views/Home/Index.cshtml
@@ -2,6 +2,21 @@
 @{
     ViewBag.Title = "Home";
 }
+@if (ViewBag.showSuccess == true)
+{
+    <div class="alert alert-success">
+        <strong>Success!</strong> @ViewBag.SuccessMessage
+    </div>
+}
+else if (ViewBag.showError == true)
+{
+    <div class="alert alert-warning">
+        <strong>Waarschuwing!</strong> @ViewBag.Message
+    </div>
+}
+
+
+
 
 <div id="homepageTopWrapper" class="jumbotron text-center" >
     <div id="homepageTop" class="container">
