added a sidebar to the settings page updated bootstrap and jquery to the most recent version added a shared layout for the settings pages

--- a/UC alert tool/Content/Site.css
+++ b/UC alert tool/Content/Site.css
@@ -39,3 +39,10 @@ textarea{
    background-color:#e13a3d;
    border-color: #e13a3d;
 }
+.sidebar{
+    z-index:1;
+    position:absolute;
+    width:250px;
+    margin-top:5;
+}
+
