--- a/UC alert tool/Views/Instellingen/Index.cshtml
+++ b/UC alert tool/Views/Instellingen/Index.cshtml
@@ -1,7 +1,15 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Instellingen";
+    Layout = "~/Views/Shared/_layout.cshtml";
+    @Html.Partial("_SettingsPartial")
 }
+<div class="settingsContentWrapper">
+    <h2>Hallo welkom op de instellen pagina</h2>
+    <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
+    <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
+    <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
+    <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
+</div>
 
-<h2>Index</h2>
+
 
