added a page for changing the log level Moved the advanced view of all the storingen to the admin test tools renamed the admin test tools to Admin tools

--- a/UC alert tool/Views/Instellingen/Index.cshtml
+++ b/UC alert tool/Views/Instellingen/Index.cshtml
@@ -1,14 +1,13 @@
 ﻿@{
     ViewBag.Title = "Instellingen";
-    Layout = "~/Views/Shared/_layout.cshtml";
     @Html.Partial("_SettingsPartial")
 }
 <div class="settingsContentWrapper">
     <h2>Hallo welkom op de instellen pagina</h2>
     <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
-    <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
-    <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
-    <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
+    <p>Gebruik het tabje 'Log instellingen' om het log niveau aan te passen</p>
+    <p>Onder 'Server instellingen' kunt u de server gegevens aanpassen die betrekking hebben op sms en email server</p>
+    <p>Er kunnen nog instellingen tabjes bijkomen in de toekomst</p>
 </div>
 
 
