--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -29,24 +29,18 @@
                         <li>@Html.ActionLink("Nieuwe storing melden", "Index", "Rapporteren")</li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown">
-                                Admin test tools
+                                Admin tools
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("email testen", "emailtester", "Testers")</li>
                                 <li>@Html.ActionLink("sms testen", "smstester", "Testers")</li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown">
-                                geavanceerde pagina's
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("producten", "Index", "Producten")</li>
                                 <li>@Html.ActionLink("storingen", "Index", "Storingen")</li>
                             </ul>
                         </li>
+                        <li>@Html.ActionLink("Instellingen", "Index", "Instellingen")</li>
+
                     }
                 </ul>
 
