--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -7,13 +7,13 @@
     <div id="navbar-wrapper" class="sidebar-nav navbar-collapse navbar-settings" aria-expanded="false">
         <ul class="nav in" id="side-menu">
             <li>
-                <a href="index.html" class=""><i class="fa fa-home fa-fw"></i> Instellingen</a>
+                <a href="index" class=""><i class="fa fa-home fa-fw"></i> Instellingen</a>
             </li>
             <li>
-                <a href="LogSettings.html" class=""><i class="fa fa-book fa-fw"></i> Log instellingen</a>
+                <a href="Logging" class=""><i class="fa fa-book fa-fw"></i> Log instellingen</a>
             </li>
             <li>
-                <a href="ServerSettings.html" class=""><i class="fa fa-server fa-fw"></i> Server Instellingen</a>
+                <a href="Server" class=""><i class="fa fa-server fa-fw"></i> Server Instellingen</a>
             </li>
         </ul>
     </div>
