seperated the email and sms settings pages to 2 diffent pages moved the appsettings back to the web.config for convenience. user can now set the email and sms settings in the settingspage
some bug occurd while using the sidebar - all known bugs regarding the settingspage and the sidebar are in github issues

--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -7,13 +7,16 @@
     <div id="navbar-wrapper" class="sidebar-nav navbar-collapse navbar-settings" aria-expanded="false">
         <ul class="nav in" id="side-menu">
             <li>
-                <a href="Instellingen/index" class=""><i class="fa fa-home fa-fw"></i> Instellingen</a>
+                <a href="~/instellingen/index" class=""><i class="fa fa-home fa-fw"></i> Instellingen</a>
             </li>
             <li>
-                <a href="Instellingen/Logging" class=""><i class="fa fa-book fa-fw"></i> Log instellingen</a>
+                <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> Log instellingen</a>
             </li>
             <li>
-                <a href="Instellingen/Server" class=""><i class="fa fa-server fa-fw"></i> Server Instellingen</a>
+                <a href="~/instellingen/smsgateway" class=""><i class="fa fa-envelope-o fa-fw"></i> SMS gateway</a>
+            </li>
+            <li>
+                <a href="~/instellingen/emailserver" class=""><i class="fa fa-server fa-fw"></i> SMTP server</a>
             </li>
         </ul>
     </div>
