fixed #2 bug - the bootstrap and jquary where loaded 2 times

--- a/UC alert tool/Views/Instellingen/Logging.cshtml
+++ b/UC alert tool/Views/Instellingen/Logging.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Log instellingen";
-    @Html.Partial("_SettingsPartial")
+    //@Html.Partial("_SettingsPartial")
     var allLevels = new List<SelectListItem>() //this c# is here because viewbag does not work well with selectListItem lists 
     {
         new SelectListItem() {Text ="ALL",Value="ALL"},
