fixed #1 - I added all the links in the sidebar to the top navbar so users can use it if they are on mobile

--- a/UC alert tool/Views/Instellingen/Index.cshtml
+++ b/UC alert tool/Views/Instellingen/Index.cshtml
@@ -3,11 +3,12 @@
     @Html.Partial("_SettingsPartial")
 }
 <div class="settingsContentWrapper">
-    <h2>Hallo welkom op de instellen pagina</h2>
+    <h2>Hallo welkom op de instellingen pagina</h2>
     <p>Gebruik de linker navigatiebalk om instellingen aan te passen</p>
     <p>Gebruik het tabje 'Log instellingen' om het log niveau aan te passen</p>
-    <p>Onder 'Server instellingen' kunt u de server gegevens aanpassen die betrekking hebben op sms en email server</p>
-    <p>Er kunnen nog instellingen tabjes bijkomen in de toekomst</p>
+    <p>Onder 'SMS gateway' kunt u de server gegevens aanpassen die betrekking hebben op sms gateway</p>
+    <p>Onder 'SMTP server' kunt u de server aanpassen die wordt gebruikt voor het versturen van de emails</p>
+    <p>Tevens zijn al deze tabjes ook te vinden onder het tabje 'instellingen' boven in de navigatiebalk</p>
 </div>
 
 
