--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -39,8 +39,19 @@
                                 <li>@Html.ActionLink("storingen", "Index", "Storingen")</li>
                             </ul>
                         </li>
-                        <li>@Html.ActionLink("Instellingen", "Index", "Instellingen")</li>
-
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown">
+                                Instellingen
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Instellingen", "Index", "Instellingen")</li>
+                                <li role="presentation" class="divider"></li>
+                                <li>@Html.ActionLink("Log instellingen", "logging", "Instellingen")</li>
+                                <li>@Html.ActionLink("SMS gateway", "smsgateway", "Instellingen")</li>
+                                <li>@Html.ActionLink("SMTP server", "emailserver", "Instellingen")</li>
+                            </ul>
+                        </li>   
                     }
                 </ul>
 
