--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -1,8 +1,9 @@
 ﻿@Styles.Render("~/Content/SettingsStyle.css")
+@Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/Scripts/projectScripts/settingsscript.js")
 
 <div class="navbar-default sidebar" role="navigation">
-    <div id="navbar-wrapper" class="sidebar-nav navbar-collapse navbar-settings" aria-expanded="false">
+    <div id="navbar-wrapper" class="sidebar-nav navbar-collapse sidebar-settings" aria-expanded="false">
         <ul class="nav in" id="side-menu">
             <li>
                 <a href="~/instellingen/index" class=""><i class="fa fa-home fa-fw"></i> Instellingen</a>
