--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -47,7 +47,8 @@
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Instellingen", "Index", "Instellingen")</li>
                                 <li role="presentation" class="divider"></li>
-                                <li>@Html.ActionLink("Log instellingen", "logging", "Instellingen")</li>
+                                <li>@Html.ActionLink("email template", "emailtemplate", "Instellingen")</li>
+                                <li>@Html.ActionLink("log instellingen", "logging", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMS gateway", "smsgateway", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMTP server", "emailserver", "Instellingen")</li>
                             </ul>
