--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -8,11 +8,15 @@
             <li>
                 <a href="~/instellingen/index" class=""><i class="fa fa-home fa-fw"></i> Instellingen</a>
             </li>
+            <li id="sidebar-divider"></li>
             <li>
-                <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> Log instellingen</a>
+                <a href="~/instellingen/emailtemplate" class=""><i class="fa fa-address-card fa-fw"></i> email template</a>
             </li>
             <li>
-                <a href="~/instellingen/smsgateway" class=""><i class="fa fa-envelope-o fa-fw"></i> SMS gateway</a>
+                <a href="~/instellingen/logging" class=""><i class="fa fa-book fa-fw"></i> log instellingen</a>
+            </li>
+            <li>
+                <a href="~/instellingen/smsgateway" class=""><i class="fa fa-envelope fa-fw"></i> SMS gateway</a>
             </li>
             <li>
                 <a href="~/instellingen/emailserver" class=""><i class="fa fa-server fa-fw"></i> SMTP server</a>
