--- a/UC alert tool/Views/Rapporteren/Melding.cshtml
+++ b/UC alert tool/Views/Rapporteren/Melding.cshtml
@@ -38,14 +38,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Begindatum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Begindatum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Begindatum, new { htmlAttributes = new { @class = "form-control", @id = "begindatum" } })
                 @Html.ValidationMessageFor(model => model.Begindatum, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Begintijd, htmlAttributes: new { @class = "control-label col-md-2", })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Begintijd, new { htmlAttributes = new { @class = "form-control", @placeholder = System.DateTime.Now } })
+                @Html.EditorFor(model => model.Begintijd, new { htmlAttributes = new { @class = "form-control", @placeholder = System.DateTime.Now, @id = "begintijd"} })
                 @Html.ValidationMessageFor(model => model.Begintijd, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -77,7 +77,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Storing aanmaken" class="btn btn-default" />
+                <input type="submit" value="Storing aanmaken" class="btn btn-default" id="submitbutton" />
             </div>
         </div>
     </div>
