--- a/UC alert tool/Views/Storingen/Edit.cshtml
+++ b/UC alert tool/Views/Storingen/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Storing aanpassen/sluiten</h2>
 
 
 @using (Html.BeginForm())
@@ -42,24 +42,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EigenaarID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EigenaarID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EigenaarID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.Begindatum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Begindatum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Begindatum, new { htmlAttributes = new { @class = "form-control", @id = "begindatum" } })
                 @Html.ValidationMessageFor(model => model.Begindatum, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Begintijd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Begintijd, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Begintijd, new { htmlAttributes = new { @class = "form-control", @id = "begintijd" } })
                 @Html.ValidationMessageFor(model => model.Begintijd, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -67,44 +59,40 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Einddatum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Einddatum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Einddatum, new { htmlAttributes = new { @class = "form-control", @id = "einddatum" } })
                 @Html.ValidationMessageFor(model => model.Einddatum, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Eindtijd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Eindtijd, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Eindtijd, new { htmlAttributes = new { @class = "form-control", @id = "eindtijd" } })
                 @Html.ValidationMessageFor(model => model.Eindtijd, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsGesloten, htmlAttributes: new { @class = "control-label col-md-2" })
+           <label class="control-label col-md-2" id="geslotentext">Gesloten</label>
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.IsGesloten)
+                    @Html.EditorFor(model => model.IsGesloten, new { htmlAttributes = new { @Id = "isGeslotenCheckbox" } })
                     @Html.ValidationMessageFor(model => model.IsGesloten, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-
-
-
-
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Opslaan" class="btn btn-default" id="submitbutton" />
             </div>
-        </div>
+        </div>  
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug naar overzicht", "Index")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/projectScripts/generalscript.js")
 }
