--- a/UC alert tool/Views/Instellingen/Index.cshtml
+++ b/UC alert tool/Views/Instellingen/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Instellingen";
-    @Html.Partial("_SettingsPartial")
+    @Html.Partial("_MessagePartial");
+    @Html.Partial("_SettingsPartial");
 }
 <div class="settingsContentWrapper">
     <h2>Hallo welkom op de instellingen pagina</h2>
