Started with the email preview venster

--- a/UC alert tool/Views/Instellingen/emailtemplate.cshtml
+++ b/UC alert tool/Views/Instellingen/emailtemplate.cshtml
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label class="control-label col-md-3">Text handtekening</label>
                 <div class="col-md-9">
-                    <input type="text" name="handtekeningText" value="@ViewBag.handtekeningtext" />
+                    <textarea type="text" name="handtekeningText" rows="8" cols="50">@ViewBag.handtekeningtext</textarea>
                 </div>
             </div>
             <div class="form-group">
