--- a/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
@@ -84,13 +84,11 @@
                 <h4>Email</h4>
             </div>
             <div class="panel-body">
-
-
                 <!--Start of email part-->
                 <div class="form-group">
                     <label class="control-label col-md-2">email onderwerp</label>
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.emailtitle, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.emailtitle, new { htmlAttributes = new { @class = "form-control", id = "emailTitle" } })
                         <div>@Html.ValidationMessageFor(model => model.emailtitle, "", new { @class = "text-danger" })</div>
 
                     </div>
@@ -98,21 +96,46 @@
                 <div class="form-group">
                     <label class="control-label col-md-2">email body</label>
                     <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.emailbody, 8, 50, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextAreaFor(model => model.emailbody, 8, 50, new { htmlAttributes = new { @class = "form-control", id = "emailBody" } })
                         <div>@Html.ValidationMessageFor(model => model.emailbody, "", new { @class = "text-danger" })</div>
 
                     </div>
                 </div>
-
-
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Storing maken en mail verzenden" class="btn btn-success" id="submitbutton" />
+            </div>
+        </div>
+        <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4>Preview</h4>
+        </div>
+        <div class="panel-body">
+            <!--Email preview-->
+            <div class="form-group">
+                <label class="control-label col-md-2">Onderwerp:</label>
+                <div class="col-md-10">
+                    <input class="form-control" id="previewTitle"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Preview email</label>
+                <div class="col-md-10">
+                    <div contenteditable="true">
+                        <p class="previewUserInput">@ViewBag.previewUserInput</p>
+                        <p class="previewSignaturet ext">@ViewBag.previewSignaturetext</p>
+                        <img src="@ViewBag.previewImage" class="previewImage"/>
                     </div>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Storing maken en mail verzenden" class="btn btn-success" id="submitbutton" />
                 </div>
             </div>
         </div>
     </div>
+</div> 
+
 }
 @section Scripts {
     @Scripts.Render("~/Scripts/projectScripts/generalscript.js")
