user gets a preview of the signature message

--- a/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
@@ -121,7 +121,7 @@
                     <div contenteditable="true">
                         <p class="previewUserInput">@ViewBag.previewUserInput</p>
                         <p class="previewSignaturet ext">@ViewBag.previewSignaturetext</p>
-                        <img src="@ViewBag.previewImage" class="previewImage"/>
+                        <img src="@ViewBag.previewImage" class="previewImage" runat="server"/>
                     </div>
                 </div>
             </div>
