admin can now make a stroring and all connected users will get a mail from the system. today added the mailing part all the \r\n are resplaced by br elements picture is shown in the signature the mail is correcly formatted

--- a/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
@@ -119,9 +119,9 @@
                 <label class="control-label col-md-2">Preview email</label>
                 <div class="col-md-10">
                     <div contenteditable="true">
-                        <p class="previewUserInput">@ViewBag.previewUserInput</p>
-                        <p class="previewSignaturet ext">@ViewBag.previewSignaturetext</p>
-                        <img src="@ViewBag.previewImage" class="previewImage" runat="server"/>
+                        <p id="previewUserInput">inhoud</p>
+                        <p class="previewSignaturetext">@ViewBag.previewSignaturetext</p>
+                        <img src="@ViewBag.previewImage" class="previewImage" l/>
                     </div>
                 </div>
             </div>
