fixed bug #8 - admin can now use enters in his signature and the alert with mail is now accepting enters and will show them in the preview screen

--- a/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
@@ -120,7 +120,8 @@
                 <div class="col-md-10">
                     <div contenteditable="true">
                         <p id="previewUserInput">inhoud</p>
-                        <p class="previewSignaturetext">@ViewBag.previewSignaturetext</p>
+                        <p class="previewSignaturetext">@Html.Raw(ViewBag.previewSignaturetext)</p>
+                        <br />
                         <img src="@ViewBag.previewImage" class="previewImage" l/>
                     </div>
                 </div>
