The sms gateway password is now a password box instaid of a textbox

--- a/UC alert tool/Views/Instellingen/smsgateway.cshtml
+++ b/UC alert tool/Views/Instellingen/smsgateway.cshtml
@@ -27,7 +27,7 @@
             <div class="form-group">
                 <label class="control-label col-md-3">SMS gateway IP wachtwoord</label>
                 <div class="col-md-9">
-                    <input type="text" name="smsGatewayPassword" value=@ViewBag.smsgatewaypassword />
+                    <input type="password" name="smsGatewayPassword" value=@ViewBag.smsgatewaypassword />
                 </div>
             </div>
             <div class="form-group">
