--- a/UC alert tool/Views/Rapporteren/MeldingMetSMS.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetSMS.cshtml
@@ -25,8 +25,8 @@
                 <div class="form-group">
                     <label class="control-label col-md-2">Storing beschrijving</label>
                     <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.description, 8, 50, new { htmlAttributes = new { @class = "form-control" } })
-                        <div>@Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })</div>
+                        @Html.TextAreaFor(model => model.Inhoud, 8, 50, new { htmlAttributes = new { @class = "form-control" } })
+                        <div>@Html.ValidationMessageFor(model => model.Inhoud, "", new { @class = "text-danger" })</div>
 
                     </div>
                 </div>
