fixed problem that the error message was not shown to the user after a redirect added a check if file extension is a .png file for the signature

--- a/UC alert tool/Views/Shared/_MessagePartial.cshtml
+++ b/UC alert tool/Views/Shared/_MessagePartial.cshtml
@@ -8,6 +8,6 @@
 else if (ViewBag.showError == true)
 {
     <div class="alert alert-warning">
-        <strong>Waarschuwing!</strong> @ViewBag.Message
+        <strong>Waarschuwing!</strong> @ViewBag.ErrorMessage
     </div>
 }
