added the jquery link back into the shared settings page. It was removed by accident. It is fixed in version 1.3. This bug is present in version 1.2. simplified the class name in the settingsscript

--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -1,6 +1,6 @@
-﻿@Styles.Render("~/Content/SettingsStyle.css")
+﻿@Scripts.Render("~/bundles/jquery")
+@Styles.Render("~/Content/SettingsStyle.css")
 @Scripts.Render("~/Scripts/projectScripts/settingsscript.js")
-
 <div class="navbar-default sidebar" role="navigation">
     <div id="navbar-wrapper" class="sidebar-nav navbar-collapse sidebar-settings" aria-expanded="false">
         <ul class="nav in" id="side-menu">
