fixed some text - it was wrong and was copied over from a other part

--- a/UC alert tool/Views/Rapporteren/MeldingMetEmailEnSMS.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmailEnSMS.cshtml
@@ -79,7 +79,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Storing maken en mail verzenden" class="btn btn-success" id="submitbutton" />
+                        <input type="submit" value="Storing maken en mail en sms verzenden" class="btn btn-success" id="submitbutton" />
                     </div>
                 </div>
             </div>
