--- a/UC alert tool/Views/Rapporteren/MeldingMetSMS.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetSMS.cshtml
@@ -7,7 +7,7 @@
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-        <h2>Storing melden en een email alert sturen</h2>
+        <h2>Storing melden en een sms alert sturen</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Partial("_MeldingPartial")
