Lots of changes read discription, added - seperate Hangfire log for better readability of the main log - enabled the hangfire dashboard and added a daily job so the admins know that the uc alert tool is online - added a shortcut link to the main navbar to the hangfire dashboard - replaced in the testing controller the normal sync processing by the hangfire async code, so it has the same behavior as the normal 'send alert' function - required tags on the emailsubject and emailbody in the emailviewmodel
Removed
- the manaul smtp serverURL because it is now handled by the email function

--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -37,6 +37,8 @@
                                 <li>@Html.ActionLink("sms testen", "smstester", "Testers")</li>
                                 <li>@Html.ActionLink("producten", "Index", "Producten")</li>
                                 <li>@Html.ActionLink("storingen", "Index", "Storingen")</li>
+                                <li role="presentation" class="divider"></li>
+                                <li>@Html.ActionLink("Achtergrond taken", "", "Hangfire")</li>
                             </ul>
                         </li>
                         <li class="dropdown">
