added a "show more" function so the user can expend a message on the homepage

--- a/UC alert tool/Content/Site.css
+++ b/UC alert tool/Content/Site.css
@@ -63,3 +63,12 @@ textarea{
 #isGeslotenCheckbox{
     margin-left:0px;
 }
+.fullText{
+    display:none;
+}
+.readmorelink{
+    color:blue;
+    text-decoration:underline;
+    cursor:pointer;
+
+}
