added a overview, so the user knows what will be send

--- a/UC alert tool/Views/Rapporteren/Melding.cshtml
+++ b/UC alert tool/Views/Rapporteren/Melding.cshtml
@@ -14,7 +14,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Storing aanmaken" class="btn btn-default" id="submitbutton" />
+                <input type="submit" value="Storing aanmaken" class="btn btn-success" id="submitbutton" />
             </div>
         </div>
     </div>
