--- a/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmail.cshtml
@@ -59,13 +59,9 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Storing maken en mail verzenden" class="btn btn-success" id="submitbutton" />
-                </div>
-            </div>
         </div>
     </div>
+     @Html.Partial("_RapporterenSummeryPartial")
 </div> 
 
 }
