--- a/UC alert tool/Views/Rapporteren/MeldingMetEmailEnSMS.cshtml
+++ b/UC alert tool/Views/Rapporteren/MeldingMetEmailEnSMS.cshtml
@@ -77,13 +77,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Storing maken en mail en sms verzenden" class="btn btn-success" id="submitbutton" />
-                    </div>
-                </div>
             </div>
         </div>
+        @Html.Partial("_RapporterenSummeryPartial")
     </div>
 
 }
