changed the metadata from the database-first database so the times are following the same pattern. fixed the remaining counter for multiple sms messages added a obsolite message for the "producten" pages changed "storingen" to "alle storingen" and moved it to the top of the list in main navigation bar translated the storingen index page and rearanged some elements for more clarity.

--- a/UC alert tool/Views/Producten/Index.cshtml
+++ b/UC alert tool/Views/Producten/Index.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
+<h1 class="alert-warning">Deze pagina zal worden verwijderd omdat toekomste data uit de database leidend wordt</h1>
 
 <p>
     @Html.ActionLink("Create New", "Create")
