--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -33,10 +33,11 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Alle storingen", "Index", "Storingen")</li>
+                                <li role="presentation" class="divider"></li>
                                 <li>@Html.ActionLink("email testen", "emailtester", "Testers")</li>
                                 <li>@Html.ActionLink("sms testen", "smstester", "Testers")</li>
                                 <li>@Html.ActionLink("producten", "Index", "Producten")</li>
-                                <li>@Html.ActionLink("storingen", "Index", "Storingen")</li>
                                 <li role="presentation" class="divider"></li>
                                 <li>@Html.ActionLink("Achtergrond taken", "", "Hangfire")</li>
                             </ul>
